add : append jvm option unsafe memory access allow